Fix layout issue

--- a/index.html
+++ b/index.html
@@ -28,187 +28,7 @@
 		</header>
 
 		<div class="products">
-			<div class="container">
-				<div class="card">
-					<div class="card__header">
-						<img
-							class="card__image"
-							src="https://source.unsplash.com/1000x1000"
-							alt="Product Image"
-						/>
-					</div>
-
-					<div class="card__body">
-						<div class="card__info">
-							<h4 class="card__title">Product Name</h4>
-							<p class="card__description">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima,
-								dolorum?
-							</p>
-							<p class="card__price">$30.00</p>
-						</div>
-
-						<div class="card__options">
-							<p class="card__options__quickview">
-								<i class="far fa-question-circle"></i> Quickview
-							</p>
-							<a class="card__options__add" href="#"
-								>Add to cart <i class="fas fa-plus-circle"></i
-							></a>
-						</div>
-					</div>
-				</div>
-
-				<div class="card">
-					<div class="card__header">
-						<img
-							class="card__image"
-							src="https://source.unsplash.com/1000x1000"
-							alt="Product Image"
-						/>
-					</div>
-
-					<div class="card__body">
-						<div class="card__info">
-							<h4 class="card__title">Product Name</h4>
-							<p class="card__description">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. A,
-								excepturi.
-							</p>
-							<p class="card__price">$25.99</p>
-						</div>
-
-						<div class="card__options">
-							<p class="card__options__quickview">
-								<i class="far fa-question-circle"></i> Quickview
-							</p>
-							<a class="card__options__add" href="#"
-								>Add to cart <i class="fas fa-plus-circle"></i
-							></a>
-						</div>
-					</div>
-				</div>
-
-				<div class="card">
-					<div class="card__header">
-						<img
-							class="card__image"
-							src="https://source.unsplash.com/1000x1000"
-							alt="Product Image"
-						/>
-					</div>
-
-					<div class="card__body">
-						<div class="card__info">
-							<h4 class="card__title">Product Name</h4>
-							<p class="card__description">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. A,
-								excepturi.
-							</p>
-							<p class="card__price">$25.99</p>
-						</div>
-
-						<div class="card__options">
-							<p class="card__options__quickview">
-								<i class="far fa-question-circle"></i> Quickview
-							</p>
-							<a class="card__options__add" href="#"
-								>Add to cart <i class="fas fa-plus-circle"></i
-							></a>
-						</div>
-					</div>
-				</div>
-
-				<div class="card">
-					<div class="card__header">
-						<img
-							class="card__image"
-							src="https://source.unsplash.com/1000x1000"
-							alt="Product Image"
-						/>
-					</div>
-
-					<div class="card__body">
-						<div class="card__info">
-							<h4 class="card__title">Product Name</h4>
-							<p class="card__description">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. A,
-								excepturi.
-							</p>
-							<p class="card__price">$25.99</p>
-						</div>
-
-						<div class="card__options">
-							<p class="card__options__quickview">
-								<i class="far fa-question-circle"></i> Quickview
-							</p>
-							<a class="card__options__add" href="#"
-								>Add to cart <i class="fas fa-plus-circle"></i
-							></a>
-						</div>
-					</div>
-				</div>
-
-				<div class="card">
-					<div class="card__header">
-						<img
-							class="card__image"
-							src="https://source.unsplash.com/1000x1000"
-							alt="Product Image"
-						/>
-					</div>
-
-					<div class="card__body">
-						<div class="card__info">
-							<h4 class="card__title">Product Name</h4>
-							<p class="card__description">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. A,
-								excepturi.
-							</p>
-							<p class="card__price">$25.99</p>
-						</div>
-
-						<div class="card__options">
-							<p class="card__options__quickview">
-								<i class="far fa-question-circle"></i> Quickview
-							</p>
-							<a class="card__options__add" href="#"
-								>Add to cart <i class="fas fa-plus-circle"></i
-							></a>
-						</div>
-					</div>
-				</div>
-
-				<div class="card">
-					<div class="card__header">
-						<img
-							class="card__image"
-							src="https://source.unsplash.com/1000x1000"
-							alt="Product Image"
-						/>
-					</div>
-
-					<div class="card__body">
-						<div class="card__info">
-							<h4 class="card__title">Product Name</h4>
-							<p class="card__description">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. A,
-								excepturi.
-							</p>
-							<p class="card__price">$25.99</p>
-						</div>
-
-						<div class="card__options">
-							<p class="card__options__quickview">
-								<i class="far fa-question-circle"></i> Quickview
-							</p>
-							<a class="card__options__add" href="#"
-								>Add to cart <i class="fas fa-plus-circle"></i
-							></a>
-						</div>
-					</div>
-				</div>
-			</div>
+			<div class="container"></div>
 		</div>
 
 		<script src="js/main.js"></script>
