Add update cart count event listener

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</nav>
 			<div class="cart">
 				<a href="#">
-					<span class="cart__count">1</span>
+					<span class="cart__count"></span>
 					<i class="fas fa-shopping-cart"></i>
 				</a>
 			</div>
