Update cart content

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</ul>
 			</nav>
 			<div class="cart">
-				<a href="#">
+				<a class="cart__link" href="#">
 					<span class="cart__count"></span>
 					<i class="fas fa-shopping-cart"></i>
 				</a>
@@ -28,6 +28,11 @@
 		</header>
 
 		<div class="products">
+			<div class="cart-content">
+				<h4 class="cart-content__title">Your cart lines:</h4>
+				<ul class="cart-content__list"></ul>
+				<p>Total amount: <span class="cart-content__price"></span></p>
+			</div>
 			<div class="container"></div>
 		</div>
 
