Add close quickview event listener

--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 				<ul class="cart-content__list"></ul>
 				<p>Total amount: <span class="cart-content__price"></span></p>
 			</div>
+
+			<div class="product-quickview">
+				<span class="product-quickview__close">x</span>
+				<div class="product-quickview__content">
+					<h4 class="product-quickview__title">Product Image</h4>
+					<img class="product-quickview__img" src="" alt="Product Not Found" />
+					<p class="product-quickview__description"></p>
+				</div>
+			</div>
+
 			<div class="container"></div>
 		</div>
 
